# image_viewer

./: Cargo.toml
src/: app.rs  main.rs
src/app/: file_loader.rs
