[package]
name = "my_img_test"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio", "advanced"]}
iced_aw = { version = "0.11.0", default-features = false, features = ["selection_list"] }
tokio = { version = "1.41.1", features = ["fs", "io-util"]}
dicom = { version = "0.8.0", features = ["image"] }
rfd = "0.15.1"

[package.metadata.bundle]
name = "image viewer"
identifier = "com.image_viewer"
icon = []